--- a/app/src/main/res/layout/activity_fan_verification.xml
+++ b/app/src/main/res/layout/activity_fan_verification.xml
@@ -70,6 +70,7 @@
             android:elevation="@null"
             android:background="@drawable/yuan_linearlayout"
             android:gravity="center"
+            android:visibility="gone"
             android:layout_marginRight="40dp"
             android:layout_weight="0.5"
             android:layout_width="0dp"
@@ -81,6 +82,7 @@
             android:textSize="20sp"
             android:elevation="@null"
             android:textColor="#666666"
+            android:visibility="gone"
             android:background="@drawable/yuan_linearlayout"
             android:layout_weight="0.5"
             android:layout_width="0dp"
