--- a/app/src/main/res/layout/dialog_air_conditioning_extended_button.xml
+++ b/app/src/main/res/layout/dialog_air_conditioning_extended_button.xml
@@ -112,7 +112,7 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/btn7"
-            android:text="风速"
+            android:text="送风"
             android:textSize="17sp"
             android:textColor="#9a9a9a"
             android:background="@drawable/xuxian_boder"
